[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = {version ="1.0.203", features = ["derive"]}
clap = { version = "4.5.7", features = ["derive"] }
rand = "0.8.4"
